@@ -5,7 +5,7 @@
     <artifactId>maxicp</artifactId>
     <packaging>jar</packaging>
     <version>1.0</version>
-    <name>minicp</name>
+    <name>maxicp</name>
     <url>http://minicp.bitbucket.io</url>
     <organization>
         <name>Laurent Michel, Pierre Schaus, Pascal Van Hentenryck</name>
@@ -15,7 +15,6 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
-        <argLine>-XX:MaxPermSize=512m</argLine>
         <checkstyle.config.location>${basedir}/checkstyle.xml</checkstyle.config.location>
     </properties>
     <repositories>
@@ -102,8 +101,8 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
-                    <source>16</source>
-                    <target>16</target>
+                    <source>17</source>
+                    <target>17</target>
                     <compilerArgs>--enable-preview</compilerArgs>
                 </configuration>
             </plugin>
